--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ notifications:
   email: false
 
 before_script:
-  - go get github.com/golang/lint/golint
+  - go get -u golang.org/x/lint/golint
   - go get github.com/fzipp/gocyclo
 
 script:
